# test

./: CMakeLists.txt
.github/workflows/: Linux-build.yml  windows-build.yml
Automation/: Automation.py  build.bat
Sources/: main.cpp
Sources/Game/: Character.cpp  Character.h  Weapon.cpp  Weapon.h
Sources/Tests/: main.cpp
Sources/Utils/: math.cpp  math.h
build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  FightClubGame.sln  FightClubGame.vcxproj  FightClubGame.vcxproj.filters  FightClubGameLib.vcxproj  FightClubGameLib.vcxproj.filters  FightClubGameTestRunner.vcxproj  FightClubGameTestRunner.vcxproj.filters  MathLib.vcxproj  MathLib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
